# DAQ_System

./: Cargo.toml  README.md
.cargo/: config.toml
GUI/: Cargo.toml
daq_gui_1/: Cargo.toml
daq_gui_1/database_2/: the_database.db
daq_gui_1/src/: main.rs
