[package]
name = "daq_gui_1"
version = "0.1.0"
authors = ["Emil Ernerfeldt <emil.ernerfeldt@gmail.com>", "Julian Henry <henryju@oregonstate.edu>"]
edition = "2021"
rust-version = "1.72"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = { version = "0.30.0", features = ["bundled"] }
eframe = {version = "0.26.1", features = [
    "default",
    "__screenshot", # __screenshot is so we can dump a screenshot using EFRAME_SCREENSHOT_TO
] }

winapi = { version = "0.3", features = ["winuser"] }

egui_plot = "0.26.1"

env_logger = { version = "0.10", default-features = false, features = [
    "auto-color",
    "humantime",
] }

chrono = "0.4.34"
